# joinable

./: Cargo.toml  README.md
example/: Cargo.toml
examples/: basic.rs  iris.rs
src/: joinable.rs  joined.rs  joined_grouped.rs  lib.rs  rhs.rs
