[package]
name = "joinable"
version = "0.1.0"
authors = ["Adam Shirey <adam@shirey.ch>"]
edition = "2021"

description = "A trait for doing SQL-like joining iterables of values."
readme = "README.md"
homepage = "https://github.com/aeshirey/joinable/"
repository = "https://github.com/aeshirey/joinable/"
license = "MIT OR Apache-2.0"
keywords = ["join"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
