[package]
name = "joinable"
version = "0.2.0"
authors = ["Adam Shirey <adam@shirey.ch>"]
edition = "2021"

description = "Traits for doing SQL-like joining iterables of values."
readme = "README.md"
homepage = "https://github.com/aeshirey/joinable/"
repository = "https://github.com/aeshirey/joinable/"
license = "MIT OR Apache-2.0"
keywords = ["join"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
irisdata = "0.1"
